[tool.poetry]
name = "python-baseball"
version = "0.1.0"
description = ""
authors = ["hsw0905 <hsw0905@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
